crates/reddb-server/tests/snapshots/graph_dsl_snapshots__graph_match_unbalanced_brace.snap
---
source: crates/reddb-server/tests/graph_dsl_snapshots.rs
assertion_line: 61
expression: "fmt_parse_error(\"MATCH (a {name: 'x') RETURN a\")"
---
input: "MATCH (a {name: 'x') RETURN a"
kind:  Syntax
error: Parse error at 1:20: Unexpected token: ) (expected: })
