crates/reddb-server/tests/snapshots/graph_dsl_snapshots__graph_match_unbalanced_bracket.snap
---
source: crates/reddb-server/tests/graph_dsl_snapshots.rs
assertion_line: 60
expression: "fmt_parse_error(\"MATCH (a)-[r:KNOWS->(b) RETURN a\")"
---
input: "MATCH (a)-[r:KNOWS->(b) RETURN a"
kind:  Syntax
error: Parse error at 1:19: Unexpected token: -> (expected: ])
