crates/reddb-server/tests/snapshots/graph_dsl_snapshots__graph_match_var_length_no_min.snap
---
source: crates/reddb-server/tests/graph_dsl_snapshots.rs
assertion_line: 71
expression: "fmt_parse_error(\"MATCH (a)-[r*..3]->(b) RETURN a\")"
---
input: "MATCH (a)-[r*..3]->(b) RETURN a"
kind:  Syntax
error: Parse error at 1:14: Unexpected token: .. (expected: ])
