crates/reddb-server/tests/snapshots/graph_dsl_snapshots__graph_neighborhood_no_source.snap
---
source: crates/reddb-server/tests/graph_dsl_snapshots.rs
assertion_line: 92
expression: "fmt_parse_error(\"GRAPH NEIGHBORHOOD\")"
---
input: "GRAPH NEIGHBORHOOD"
kind:  Syntax
error: Parse error at 1:19: Unexpected token: EOF (expected: string)
