crates/reddb-server/tests/snapshots/graph_dsl_snapshots__graph_path_eof_after_keyword.snap
---
source: crates/reddb-server/tests/graph_dsl_snapshots.rs
assertion_line: 81
expression: "fmt_parse_error(\"PATH\")"
---
input: "PATH"
kind:  Syntax
error: Parse error at 1:5: Unexpected token: EOF (expected: FROM)
