crates/reddb-server/tests/snapshots/graph_dsl_snapshots__graph_path_missing_to.snap
---
source: crates/reddb-server/tests/graph_dsl_snapshots.rs
assertion_line: 82
expression: "fmt_parse_error(\"PATH FROM host('alice')\")"
---
input: "PATH FROM host('alice')"
kind:  Syntax
error: Parse error at 1:24: Unexpected token: EOF (expected: TO)
